# agent-guardrails

./: .gitignore  CHANGELOG.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml
agentguard/: __init__.py  enforcer.py
agentguard-plugin/: __init__.py  plugin.yaml
config/: enforcer-rules.md.example  enforcer-rules.yaml  hermes-enforcer-rules.example.md  production-rules.example.md  routing-table.yaml  routing-table.yaml.example
docs/: BEGINNER-GUIDE.md  HERMES-INTEGRATION.md  LESSONS-ENFORCER-FALSE-POSITIVES.md
hermes-plugin/: __init__.py  plugin.yaml
