[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "1.1.0"
description = "LLM Agent behavior rule engine — tool-call level governance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentGuard"},
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["llm", "agent", "guardrails", "enforcer", "behavior-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/714roy/agent-guardrails"
Source = "https://github.com/714roy/agent-guardrails"
BugTracker = "https://github.com/714roy/agent-guardrails/issues"

[project.optional-dependencies]
hermes = []

[tool.setuptools.packages.find]
include = ["agentguard*"]
